# univerFirst4Tasks

./: CMakeLists.txt  README.md  includes.h  menu.cpp
Task1/: Cfrac.cpp  Cfrac.h  Cpoint.cpp  Cpoint.h  menu1.cpp
Task2/: Cperson.cpp  Cperson.h  Cstudent.cpp  Cstudent.h  menu2.cpp
Task3/: Cstring.cpp  Cstring.h  Ctimer.cpp  Ctimer.h  Cvector.cpp  Cvector.h  menu3.cpp
Task4/: Ccomplex.cpp  Ccomplex.h  menu4.cpp
firstTask/: Cfrac.cpp  Cfrac.h  Cpoint.cpp  Cpoint.h  menu1.cpp
headers/: includes.h  prototypes.h
source/: cfrac_div_checker.cpp  input_data.cpp  main.cpp  menu.cpp  menuClass.cpp  menuClass.h
