cmake_minimum_required(VERSION 3.16)
project(univerFirst4Tasks)

set(CMAKE_CXX_STANDARD 20)

add_executable(univerFirst4Tasks source/main.cpp headers/includes.h firstTask/Cpoint.cpp firstTask/Cpoint.h firstTask/Cfrac.cpp firstTask/Cfrac.h firstTask/menu1.cpp source/menu.cpp headers/prototypes.h source/input_data.cpp)